Causeview Package Complete/ant script/retrieveUnpackaged/objects/RD_Allocation__c.object
<CustomObject>
    <description>Causeview - Recurring gift allocations.  Profile for creating allocation records when a new payment is made.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Identifies if allocation is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(DEPRECATED)</label>
        <referenceTo>Appeal__c</referenceTo>
        <relationshipLabel>DEPRECATED</relationshipLabel>
        <relationshipName>Recurring_Gift_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>(DEPRECATED)</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recurring Gift Allocations (Campaign)</relationshipLabel>
        <relationshipName>Recurring_Gift_Allocations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The campaign related to the appeal record</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Appeals</relationshipLabel>
        <relationshipName>Recurring_Gift_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Allocation_Text__c</fullName>
        <inlineHelpText>Used to capture any information that you would like to have copied onto the Allocation records created by the causeview system after payment insert.</inlineHelpText>
        <label>Custom Allocation Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOwnerId__c</fullName>
        <label>Owner</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Recurring Gift Allocations</relationshipLabel>
        <relationshipName>Recurring_Gift_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Appeal</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recurring Gift Allocations (Campaign/Appeal)</relationshipLabel>
        <relationshipName>Recurring_Gift_Allocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Direct Mail Code</inlineHelpText>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Recurring Gift Allocations</relationshipLabel>
        <relationshipName>Recurring_Gift_Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Appeal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Appeal</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Recurring Gift Allocations (Parent Appeal)</relationshipLabel>
        <relationshipName>Recurring_Gift_Allocations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Gift__c</fullName>
        <label>Recurring Gift</label>
        <referenceTo>Recurring_Donation__c</referenceTo>
        <relationshipLabel>Recurring Gift Allocations</relationshipLabel>
        <relationshipName>Recurring_Gift_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Recurring Gift Allocation</label>
    <nameField>
        <displayFormat>RGA-{0000000}</displayFormat>
        <label>RGA No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Gift Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>